# AIwithC

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
